--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "9.3.10",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
     "expo": "^49.0.0",
+    "expo-camera": "~13.4.4",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-camera": "^4.2.1",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-in-app-message": "^1.0.33",
     "react-native-paper": "^5.10.6",
-    "expo-location": "~16.1.0"
+    "expo-file-system": "~15.4.4",
+    "expo-media-library": "~15.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
