--- a/package.json
+++ b/package.json
@@ -9,26 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "axios": "^1.5.0",
-    "expo": "^49.0.0",
+    "expo": "^49.0.11",
     "expo-camera": "~13.4.4",
     "expo-location": "~16.1.0",
-    "expo-status-bar": "~1.6.0",
+    "expo-media-library": "~15.4.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-camera": "^4.2.1",
-    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-in-app-message": "^1.0.33",
-    "react-native-paper": "^5.10.6",
-    "expo-file-system": "~15.4.4",
-    "expo-media-library": "~15.4.1"
+    "expo-permissions": "~14.2.1",
+    "expo-av": "~13.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.22.20",
+    "depcheck": "^1.4.6"
   },
   "private": true
 }
