--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "expo": "^49.0.11",
+    "expo-av": "~13.4.1",
     "expo-camera": "~13.4.4",
+    "expo-file-system": "~15.4.4",
     "expo-location": "~16.1.0",
     "expo-media-library": "~15.4.1",
+    "expo-modules-core": "~1.5.10",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
-    "expo-av": "~13.4.1"
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
